--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,14 @@ h3 {
 p {
     color: #ffffff;
 }
-.lazyload {    
+
+.lazyload {
     background-image: url('/img/posterholder.png');
     background-size: cover;
     background-position: center;
-    
+    background-color: #25252566;
 }
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -54,6 +56,7 @@ li:hover {
 
     background: #484848;
 }
+
 .genre-filter {
     display: flex;
     position: absolute;
@@ -76,15 +79,17 @@ li:hover {
         transition: .5s;
         margin: 2px;
         display: flex;
-      }
-      p {
+    }
+
+    p {
         margin: 0;
         color: #ffffff;
         margin: 0 5px 0 5px;
         overflow: hidden;
         text-overflow: ellipsis;
-      }
-     span {
+    }
+
+    span {
         opacity: 0.8;
         transition: all 200ms;
         font-size: 15px;
@@ -95,7 +100,7 @@ li:hover {
         display: block;
         overflow: visible;
         margin-right: 2px;
-        margin: 1px 5px 1px 5px;      
+        margin: 1px 5px 1px 5px;
 
         &:hover {
             opacity: 1;
@@ -103,14 +108,17 @@ li:hover {
 
     }
 }
+
 .genre-list {
     width: 100%;
     position: absolute;
     margin-top: 50px;
-    user-select: none;    
-   li {        
-    cursor: pointer;
+    user-select: none;
+
+    li {
+        cursor: pointer;
     }
+
     ul {
         max-height: 300px;
         overflow-y: scroll;
@@ -135,38 +143,39 @@ main {
 }
 
 .film-count {
+    margin: 25px 30px 5px;
+    top: 0;
     font-weight: bolder;
     color: #8c8c8c60;
     display: flex;
     position: absolute;
     right: 0;
+    flex-direction: column-reverse;
+    align-items: center;
+    /* padding: 0; */
 }
 
 .film-count p,
 .film-count br {
     font-weight: bolder;
     color: #8c8c8c60;
-    display: flex;
-    position: absolute;
-    right: 0;
-}
-
-.film-count {
-    margin: 31px;
-    top: 0;
-  
+    margin: 0px;
 }
 
 /*loader*/
+.container {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
 
 .loader {
     width: 100px;
     height: 100px;
-    right: 50%;
     bottom: 300px;
     border-radius: 100%;
     position: sticky;
-    margin: 100px auto;
 }
 
 .cf:before,
@@ -223,7 +232,7 @@ main {
 .category {
 
     font-size: 20px;
-    display: flex;  
+    display: flex;
     justify-content: space-around;
 }
 
@@ -385,7 +394,7 @@ main {
     font-size: 18px;
     overflow: hidden;
     text-overflow: ellipsis;
-    display: block ruby;
+    height: 40px;
 }
 
 .movie-year {
@@ -477,6 +486,7 @@ body {
     width: 100%;
     height: 100%;
     cursor: pointer;
+    user-select: none;
 }
 
 .cursorpointer {
@@ -654,6 +664,7 @@ footer {
         margin-right: 0 !important;
 
     }
+
     .genre-list ul {
         max-height: 144px;
         bottom: 56px;
@@ -698,8 +709,16 @@ footer {
         }
 
         h3 {
-            text-wrap: balance;
-            word-break: break-all;
+            word-break: break-word;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: flex;
+            margin: 0 50px 0 10px;
+        }
+        .close {
+            margin: 5px 10px !important;
+            right: 0 !important;
+            top: 0 !important;
         }
     }
 
@@ -721,7 +740,6 @@ footer {
     #popup-title {
         overflow: hidden !important;
         max-height: 7%;
-        max-width: 80%;
         text-overflow: ellipsis !important;
     }
 
@@ -774,27 +792,40 @@ footer {
     }
 
     .movie-card img {
-        max-width: 15%;
-        min-width: 10%;
+        width: 150px;
         height: auto;
         position: absolute;
-        right: 15%;        
+        right: 0%;
     }
 
     .movie-card {
         position: relative;
         display: flex;
-        flex-direction: column;        
+        flex-direction: column;
         width: auto !important;
         height: auto !important;
     }
 
+    .overlay {
+        z-index: 2;
+        user-select: none;
+    }
+
     .movie-info {
+        background: rgb(75, 75, 75);
+        background: -moz-linear-gradient(90deg, rgba(75, 75, 75, 1) 36%, rgba(255, 255, 255, 0) 100%);
+        background: -webkit-linear-gradient(90deg, rgba(75, 75, 75, 1) 36%, rgba(255, 255, 255, 0) 100%);
+        background: linear-gradient(90deg, rgba(75, 75, 75, 1) 36%, rgba(255, 255, 255, 0) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#4b4b4b", endColorstr="#ffffff", GradientType=1);
         display: flex;
         flex-direction: column;
         margin-right: 50px;
-        text-wrap: balance;
-        line-height: 1.5em;
+        z-index: 1;
+        justify-content: space-between;
+
+        h2 {
+            height: 40px !important;
+        }
     }
 
     .movie-info>* {
